--- a/scss/_maps.scss
+++ b/scss/_maps.scss
@@ -13,3 +13,9 @@ $hero-layout: (
   content-gap: 1.5rem,
   text-max-width: 480px,
 );
+
+$tools-layout: (
+  padding-desktop: 1.5rem,
+  padding-mobile: 3rem,
+  content-gap: 1.5rem,
+);
