--- a/scss/components/_trusted-by.scss
+++ b/scss/components/_trusted-by.scss
@@ -6,8 +6,8 @@
 
   span {
     display: block;
-    margin-bottom: 1rem;
-    font-size: 0.9rem;
+    margin-bottom: 1.5rem;
+    font-size: 1rem;
   }
 }
 
